# euroleague-hca

./: .gitignore  LICENSE  PLAN_LIVE_DATA.md  README.md  pyproject.toml  requirements.txt
dashboards/: anomalies.html  dashboard-v1.html  dashboard.html  explorer.html  final_report.html  index.html  phase-01-ingest.html  phase-02-coverage.html  phase-04-descriptive.html  phase-04b-descriptive-ext.html  phase-05-tests.html  phase-06-ml-logistic.html  phase-07-ml-trees.html  phase-07b-hierarchical.html  phase-07c-mixedlm.html  phase-08-covid.html  phase-11-mechanism.html  rebound_rates.html  referees.html  transitions.html
docs/: anomalies.html  concepts-learned.html  dashboard.html  explorer.html  final_report.html  index.html  llm-engineering-lessons.html  manifest.json  rebound_rates.html  referees.html  transitions.html
learning/: concepts-learned.md  debug-log.md  llm-engineering-lessons.md
reports/: anomalies.json  covid_output.json  final_report.md  hca_transitions.json  llm-log.md  rebound_rates.json  rebound_rates_qa.json  rebound_slices.json  referee_qa.json  ridge_fe_output.json  team_explorer.json  transitions_bars.json  transitions_bigrams.json  transitions_concentration.json  transitions_heatmap.json  transitions_qa.json  transitions_top1.csv  trees_output.json
scripts/: 01_ingest.py  01_ingest_live_smoke.py  01b_boxscores.py  01c_playbyplay.py  02_validate.py  03_features.py  04_descriptive_hca.py  04b_descriptive_ext.py  05_hypothesis_tests.py  06_ml_logistic.py  07_ml_trees.py  07b_hierarchical.py  07c_mixedlm.py  07d_ridge_fe.py  10b_nba_context.py  (+30 more)
(+70 files in other folders)
