[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "euroleague-hca"
version = "0.1.0"
description = "EuroLeague home-court advantage: 10-season ML + stats learning project"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pyarrow>=15",
    "requests>=2.31",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "pandera>=0.19",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.1", "shap>=0.45"]
bayes = ["pymc>=5.10"]
dev = ["pytest>=8.0", "ruff>=0.3"]
nba = ["nba_api>=1.4"]  # used by scripts/10b_nba_context.py for cross-league context

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
